# leafc

./: Cargo.toml
demo_leaf_crate/: LeafCrate.toml  main.leaf  pp.leaf
demo_leaf_module/: foo.leaf  main.leaf
leafc/leafc_compiler/: Cargo.toml
leafc/leafc_compiler/src/: lib.rs
leafc/leafc_coreapi/: Cargo.toml
leafc/leafc_coreapi/src/: ast.rs  codegen.rs  compiler.rs  crate_meta.rs  diagnostic.rs  hir.rs  hir_lower.rs  hir_pass.rs  lang_builtins.rs  lang_items.rs  lexer.rs  lib.rs  mir.rs  mir_lower.rs  name_pass.rs  operators.rs  parser.rs  scope.rs  source.rs  symbol.rs  symbol_name.rs  tokens_pass.rs  type_checker.rs  type_context.rs  type_symbol.rs  type_system.rs
leafc/leafc_diag/: Cargo.toml
leafc/leafc_diag/src/: lib.rs
leafc/leafc_diagnostic/src/: lib.rs
leafc/leafc_hirlower/: Cargo.toml
leafc/leafc_hirlower/src/: lib.rs
leafc/leafc_lexer/: Cargo.toml
leafc/leafc_lexer/src/: lib.rs
leafc/leafc_mirlower/: Cargo.toml
leafc/leafc_mirlower/src/: lib.rs
leafc/leafc_namepass/: Cargo.toml
leafc/leafc_namepass/src/: lib.rs
leafc/leafc_parser/: Cargo.toml
leafc/leafc_parser/src/: lib.rs  parse_abstract_decl.rs  parse_decl.rs  parse_expr.rs  parse_external_decl.rs  parse_fun_decl.rs  parse_import.rs  parse_type_decl.rs  parse_use_decl.rs
leafc/leafc_tokenpass/: Cargo.toml
leafc/leafc_tokenpass/src/: lib.rs
leafc/leafc_typechecker/: Cargo.toml
leafc/leafc_typechecker/src/: lib.rs  type_context.rs
leafc/realworld_io_api/: Cargo.toml
leafc/realworld_io_api/src/: lib.rs
src/: main.rs
