[package]
name = "leafc"
version = "0.1.0"
edition = "2024"

[dependencies]
leafc_coreapi = { path = "leafc/leafc_coreapi" }
leafc_compiler = { path = "leafc/leafc_compiler" }
leafc_lexer = { path = "leafc/leafc_lexer" }
leafc_parser = { path = "leafc/leafc_parser" }
leafc_namepass = { path = "leafc/leafc_namepass" }
leafc_hirlower = { path = "leafc/leafc_hirlower" }
leafc_diag = { path = "leafc/leafc_diagnostic" }
leafc_tokenpass = { path = "leafc/leafc_tokenpass" }