[package]
name = "leafc_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
leafc_coreapi = { path = "../leafc_coreapi" }
leafc_parser = { path = "../leafc_parser" }
leafc_namepass = { path = "../leafc_namepass" }
leafc_hirlower = { path = "../leafc_hirlower" }
leafc_typechecker = { path = "../leafc_typechecker" }
leafc_diag = { path = "../leafc_diag" }
realworld_io_api = { path = "../realworld_io_api" }
intervaltree = {  version = "0.2.7" }